adding local repo

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,5 @@ pom.xml.asc
 .settings/
 bin/
 resources/WNV.trees
+resources/WNV_small.trees
 WNV_relaxed_geo_gamma.trees
-maven_repository/jebl/
-maven_repository/local/
